--- a/src/pages/post/[...slug].astro
+++ b/src/pages/post/[...slug].astro
@@ -6,7 +6,7 @@ import Layout from '@layouts/Layout.astro';
 import { Image } from 'astro:assets';
 
 export async function getStaticPaths() {
-  return (await getSortedPostsByType('post', 'all')).map((post: any) => {
+  return (await getSortedPostsByType('post', 'all')).map((post) => {
     return {
       params: { slug: post.slug },
       props: { post },
