--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -12,32 +12,44 @@ import '@styles/global.css';
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <meta content="@jvwissen" name="twitter:creator" />
     <meta content="summary_large_image" name="twitter:card" />
+    <link
+      rel="alternate"
+      type="application/rss+xml"
+      title="Posts by Jeroen van Wissen"
+      href="/feed.xml"
+    />
+    <link
+      rel="alternate"
+      type="application/rss+xml"
+      title="Recipes by Jeroen van Wissen"
+      href="/recipes/feed.xml"
+    />
     <slot name="head" />
   </head>
   <body class="bg-black">
-    <div class="w-full border-b border-primary-900">
-      <nav class="max-w-6xl mx-auto px-2">
+    <div class="border-primary-900 w-full border-b">
+      <nav class="mx-auto max-w-6xl px-2">
         <div class="logo flex flex-wrap items-center justify-between">
           <div class="flex justify-center">
             <a href="/" class="inline-block" aria-label=";// Logo"><Logo /></a>
             <a
               href="/"
-              class="inline-block px-2 text-quaternary-50 text-xl lg:text-3xl xl:text-6xl xl:leading-14 font-extrabold italic"
+              class="text-quaternary-50 inline-block px-2 text-xl font-extrabold italic lg:text-3xl xl:text-6xl xl:leading-14"
               aria-label="Jeroen van Wissen">jeroenvanwissen</a
             >
           </div>
 
           <label
-            class="lg:hidden flex relative z-40 cursor-pointer px-0 py-6"
+            class="relative z-40 flex cursor-pointer px-0 py-6 lg:hidden"
             for="mobile-menu"
           >
             <input class="peer hidden" type="checkbox" id="mobile-menu" />
             <div
-              class="relative z-50 block h-[1px] w-7 bg-primary-50 bg-transparent content-[''] before:absolute before:top-[-0.35rem] before:z-50 before:block before:h-full before:w-full before:bg-primary-50 before:transition-all before:duration-200 before:ease-out before:content-[''] after:absolute after:right-0 after:bottom-[-0.35rem] after:block after:h-full after:w-full after:bg-primary-50 after:transition-all after:duration-200 after:ease-out after:content-[''] peer-checked:bg-transparent before:peer-checked:top-0 before:peer-checked:w-full before:peer-checked:rotate-45 before:peer-checked:transform after:peer-checked:bottom-0 after:peer-checked:w-full after:peer-checked:-rotate-45 after:peer-checked:transform"
+              class="bg-primary-50 before:bg-primary-50 after:bg-primary-50 relative z-50 block h-[1px] w-7 bg-transparent content-[''] peer-checked:bg-transparent before:absolute before:top-[-0.35rem] before:z-50 before:block before:h-full before:w-full before:transition-all before:duration-200 before:ease-out before:content-[''] before:peer-checked:top-0 before:peer-checked:w-full before:peer-checked:rotate-45 before:peer-checked:transform after:absolute after:right-0 after:bottom-[-0.35rem] after:block after:h-full after:w-full after:transition-all after:duration-200 after:ease-out after:content-[''] after:peer-checked:bottom-0 after:peer-checked:w-full after:peer-checked:-rotate-45 after:peer-checked:transform"
             >
             </div>
             <div
-              class="fixed inset-0 z-40 hidden h-full w-full bg-secondary-900/50 backdrop-blur-sm peer-checked:block"
+              class="bg-secondary-900/50 fixed inset-0 z-40 hidden h-full w-full backdrop-blur-sm peer-checked:block"
             >
               &nbsp;
             </div>
@@ -45,7 +57,7 @@ import '@styles/global.css';
               class="fixed top-0 right-0 z-40 h-full w-full translate-x-full overflow-y-auto overscroll-y-none transition duration-500 peer-checked:translate-x-0"
             >
               <div
-                class="float-right min-h-full w-[85%] bg-primary-900 text-primary-50 px-6 pt-12 shadow-2xl"
+                class="bg-primary-900 text-primary-50 float-right min-h-full w-[85%] px-6 pt-12 shadow-2xl"
               >
                 <menu>
                   <NavItem href="/" label="home" id="home-m" />
@@ -63,7 +75,7 @@ import '@styles/global.css';
           </label>
 
           <ul
-            class="hidden lg:flex justify-center list-reset w-full md:w-auto py-4 md:py-0 px-0 xl:px-4 text-md gap-2"
+            class="list-reset text-md hidden w-full justify-center gap-2 px-0 py-4 md:w-auto md:py-0 lg:flex xl:px-4"
           >
             <NavItem href="/" label="home" id="home" />
             <NavItem
@@ -80,9 +92,9 @@ import '@styles/global.css';
     </div>
     <slot />
     <div class="w-full">
-      <div class="max-w-6xl mx-auto px-2">
+      <div class="mx-auto max-w-6xl px-2">
         <div
-          class="flex flex-row items-center justify-center space-x-2 mt-1 py-10"
+          class="mt-1 flex flex-row items-center justify-center space-x-2 py-10"
         >
           <a
             href="https://github.com/jeroenvanwissen"
@@ -93,7 +105,7 @@ import '@styles/global.css';
             <svg
               xmlns="http://www.w3.org/2000/svg"
               viewBox="0 0 496 512"
-              class="h-6 w-6 fill-quaternary-400/60 hover:fill-quaternary-400 hover:scale-110 transition-all"
+              class="fill-quaternary-400/60 hover:fill-quaternary-400 h-6 w-6 transition-all hover:scale-110"
             >
               <path
                 d="M165.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3.3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5.3-6.2 2.3zm44.2-1.7c-2.9.7-4.9 2.6-4.6 4.9.3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM244.8 8C106.1 8 0 113.3 0 252c0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.6-6.5-11.1-33.3 2.6-67.9 20.9-6.5 69 27 69 27 20-5.6 41.5-8.5 62.8-8.5s42.8 2.9 62.8 8.5c0 0 48.1-33.6 69-27 13.7 34.7 5.2 61.4 2.6 67.9 16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1C428.2 457.8 496 362.9 496 252 496 113.3 383.5 8 244.8 8zM97.2 352.9c-1.3 1-1 3.3.7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3.3 2.9 2.3 3.9 1.6 1 3.6.7 4.3-.7.7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3.7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3.7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9 1.6 2.3 4.3 3.3 5.6 2.3 1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z"
@@ -109,7 +121,7 @@ import '@styles/global.css';
             <svg
               xmlns="http://www.w3.org/2000/svg"
               viewBox="0 0 448 512"
-              class="h-6 w-6 fill-quaternary-400/60 hover:fill-quaternary-400 hover:scale-110 transition-all"
+              class="fill-quaternary-400/60 hover:fill-quaternary-400 h-6 w-6 transition-all hover:scale-110"
             >
               <path
                 d="M416 32H31.9C14.3 32 0 46.5 0 64.3v383.4C0 465.5 14.3 480 31.9 480H416c17.6 0 32-14.5 32-32.3V64.3c0-17.8-14.4-32.3-32-32.3zM135.4 416H69V202.2h66.5V416zm-33.2-243c-21.3 0-38.5-17.3-38.5-38.5S80.9 96 102.2 96c21.2 0 38.5 17.3 38.5 38.5 0 21.3-17.2 38.5-38.5 38.5zm282.1 243h-66.4V312c0-24.8-.5-56.7-34.5-56.7-34.6 0-39.9 27-39.9 54.9V416h-66.4V202.2h63.7v29.2h.9c8.9-16.8 30.6-34.5 62.9-34.5 67.2 0 79.7 44.3 79.7 101.9V416z"
@@ -124,7 +136,7 @@ import '@styles/global.css';
           >
             <svg
               viewBox="0 0 24 24"
-              class="h-6 w-6 fill-quaternary-400/60 hover:fill-quaternary-400 hover:scale-110 transition-all"
+              class="fill-quaternary-400/60 hover:fill-quaternary-400 h-6 w-6 transition-all hover:scale-110"
             >
               <path
                 d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"
@@ -140,7 +152,7 @@ import '@styles/global.css';
             <svg
               xmlns="http://www.w3.org/2000/svg"
               viewBox="0 0 448 512"
-              class="h-6 w-6 fill-quaternary-400/60 hover:fill-quaternary-400 hover:scale-110 transition-all"
+              class="fill-quaternary-400/60 hover:fill-quaternary-400 h-6 w-6 transition-all hover:scale-110"
             >
               <path
                 d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z"
@@ -156,7 +168,7 @@ import '@styles/global.css';
             <svg
               xmlns="http://www.w3.org/2000/svg"
               viewBox="0 0 448 512"
-              class="h-6 w-6 fill-quaternary-400/60 hover:fill-quaternary-400 hover:scale-110 transition-all"
+              class="fill-quaternary-400/60 hover:fill-quaternary-400 h-6 w-6 transition-all hover:scale-110"
             >
               <path
                 d="M433 179.11c0-97.2-63.71-125.7-63.71-125.7-62.52-28.7-228.56-28.4-290.48 0 0 0-63.72 28.5-63.72 125.7 0 115.7-6.6 259.4 105.63 289.1 40.51 10.7 75.32 13 103.33 11.4 50.81-2.8 79.32-18.1 79.32-18.1l-1.7-36.9s-36.31 11.4-77.12 10.1c-40.41-1.4-83-4.4-89.63-54a102.54 102.54 0 0 1-.9-13.9c85.63 20.9 158.65 9.1 178.75 6.7 56.12-6.7 105-41.3 111.23-72.9 9.8-49.8 9-121.5 9-121.5zm-75.12 125.2h-46.63v-114.2c0-49.7-64-51.6-64 6.9v62.5h-46.33V197c0-58.5-64-56.6-64-6.9v114.2H90.19c0-122.1-5.2-147.9 18.41-175 25.9-28.9 79.82-30.8 103.83 6.1l11.6 19.5 11.6-19.5c24.11-37.1 78.12-34.8 103.83-6.1 23.71 27.3 18.4 53 18.4 175z"
